@@ -27,6 +27,9 @@ run_round_test(RoundingMode::AwayFromZero);
         [-1.9, 0] => -2
 
 ========== minus precision ==========
+          [0, -3] => 0
+       [0.01, -3] => 1000
+      [-0.01, -3] => -1000
          [50, -2] => 100
         [-50, -2] => -100
        [1230, -1] => 1230
