@@ -27,6 +27,9 @@ run_round_test(RoundingMode::PositiveInfinity);
         [-1.9, 0] => -1
 
 ========== minus precision ==========
+          [0, -3] => 0
+       [0.01, -3] => 1000
+      [-0.01, -3] => 0
          [50, -2] => 100
         [-50, -2] => 0
        [1230, -1] => 1230
