@@ -6,15 +6,11 @@ bcmath
 <?php
 
 $early_return_cases = [
-    ['123', -4],
-    ['123.123456', -4],
     ['123', 1],
     ['123.5', 1],
     ['123.5', 2],
     ['123.0000000000000000000001', 22],
     ['123.0000000000000000000001', 23],
-    ['-123', -4],
-    ['-123.123456', -4],
     ['-123', 1],
     ['-123.5', 1],
     ['-123.5', 2],
@@ -54,15 +50,11 @@ foreach (RoundingMode::cases() as $mode) {
 }
 ?>
 --EXPECT--
-                        [123, -4] => 0
-                 [123.123456, -4] => 0
                          [123, 1] => 123.0
                        [123.5, 1] => 123.5
                        [123.5, 2] => 123.50
  [123.0000000000000000000001, 22] => 123.0000000000000000000001
  [123.0000000000000000000001, 23] => 123.00000000000000000000010
-                       [-123, -4] => 0
-                [-123.123456, -4] => 0
                         [-123, 1] => -123.0
                       [-123.5, 1] => -123.5
                       [-123.5, 2] => -123.50
