@@ -6,6 +6,7 @@ bcmath
 <?php
 foreach (RoundingMode::cases() as $mode) {
     foreach ([
+        '0',
         '0.1',
         '-0.1',
         '1.0',
@@ -19,17 +20,20 @@ foreach (RoundingMode::cases() as $mode) {
         '2.5',
         '-2.5',
     ] as $number) {
-        $func_ret = bcround($number, 0, $mode);
-        $method_ret = (new BcMath\Number($number))->round(0, $mode);
-        if ($method_ret->compare($func_ret) !== 0) {
-            echo "Result is incorrect.\n";
-            var_dump($number, $mode, $func_ret, $method_ret);
+        foreach ([0, 5, -5] as $scale) {
+            $func_ret = bcround($number, $scale, $mode);
+            $method_ret = (new BcMath\Number($number))->round($scale, $mode);
+            if ($method_ret->compare($func_ret) !== 0) {
+                echo "Result is incorrect.\n";
+                var_dump($number, $mode, $func_ret, $method_ret);
+            }
         }
     }
 }
 
 foreach (RoundingMode::cases() as $mode) {
     foreach ([
+        '0',
         '1.2345678',
         '-1.2345678',
     ] as $number) {
